--- a/src/pageStyle.css
+++ b/src/pageStyle.css
@@ -64,7 +64,7 @@ body {
     padding: 0 2rem;
     width: 100%;
     height: 4rem;
-    background: var(--darkest-bg-color);
+    background: white;
     border-bottom: 1px solid var(--darker-bg-color);
 }
 .header__left-section,
@@ -76,13 +76,36 @@ body {
 
 .main-logo-container {
     cursor: default;
-    width: 9.2rem;
+    width: 2.5rem;
     height: 2.5rem;
     border-radius: var(--border-radius);
-    background-color: black;
+    background-color: var(--darkest-bg-color);
     color: white;
     font-weight: 600;
-    opacity: 0.7;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2rem;
+}
+
+.header-links-container {
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+    font-weight: 500;
+}
+
+.header-links-container__header-link {
+    padding: 0.5rem;
+    text-decoration: none;
+    color: black;
+    line-height: 1;
+    opacity: 0.5;
+    transition: opacity 180ms linear;
+}
+
+.header-links-container__header-link:hover,
+.header-links-container__header-link.active-link {
+    opacity: 1;
 }
 
 .header__left-section,
