--- a/src/pageStyle.css
+++ b/src/pageStyle.css
@@ -193,3 +193,24 @@ body {
     padding: 2rem;
     background-color: var(--light-bg-color);
 }
+
+.tabs-selector {
+    padding: 4px;
+    background-color: rgba(156, 179, 255, 0.07);
+    border-radius: var(--border-radius);
+    color: var(--darkest-bg-color);
+}
+
+.selected-tab {
+    background-color: #fff;
+    font-weight: 600;
+    border: 1px solid var(--darker-bg-color);
+    box-shadow: 0px 3px 6px -3px rgba(0, 0, 0, 0.1);
+}
+
+.tabs-selector__tab {
+    cursor: pointer;
+    line-height: 1;
+    border-radius: var(--border-radius);
+    padding: 0.42rem 1.1rem;
+}
