fix: fix sticky onboarding component

--- a/lib/StickyOnboardingWizard/StickyOnboardingWizard.sass
+++ b/lib/StickyOnboardingWizard/StickyOnboardingWizard.sass
@@ -1,8 +1,8 @@
 @import '../styles/_variables'
 @import '../styles/_mixins'
 
-.rwo-onboarding-wizard-wrapper
-    position: absolute
+.rwo-sticky-onboarding-wizard
+    position: fixed
 
     .rwo-sticky-onboarding-modal
         z-index: 1
