--- a/lib/OnboardingStepSpotlight/OnboardingStepSpotlight.sass
+++ b/lib/OnboardingStepSpotlight/OnboardingStepSpotlight.sass
@@ -7,6 +7,7 @@
     left: 0
     height: 100%
     width: 100%
+    scrollbar-gutter: stable
 
 .rwo-onboarding-step-spotlight
     position: absolute
