--- a/lib/styles/main.sass
+++ b/lib/styles/main.sass
@@ -1,5 +1,5 @@
-@import './_variables'
-@import './_mixins'
+@use './_variables' as *
+@use './_mixins' as *
 
 .rwo-onboarding-wizard-wrapper
   top: 0
